--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
+    "ember-moment": "^10.0.2",
     "ember-mu-login": "^3.1.0",
     "ember-mu-registration": "^1.1.0",
     "ember-page-title": "^8.0.0",
@@ -67,6 +68,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-qunit": "^8.0.1",
     "loader.js": "^4.7.0",
+    "moment-timezone": "^0.5.48",
     "prettier": "^3.0.3",
     "qunit": "^2.20.0",
     "qunit-dom": "^2.0.0",
